--- a/src/main/resources/static/css/mainStyles.css
+++ b/src/main/resources/static/css/mainStyles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
+
 *  {
     margin: 0;
     padding: 0;
@@ -11,7 +13,130 @@ body {
     font-size: 16px;
 }
 
+.page-container {
+  position: relative;
+  min-height: 100vh;
+}
+
 a {
     text-decoration: none;
     color: inherit;
 }
+
+/************************************ navbar ************************************/
+
+.navbar {
+    position: fixed;
+    top: 0;
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.navbar ul li {
+    display: flex;
+    align-items: center;
+    list-style-type: none;
+    padding: 0 20px;
+    font-size: 1.5rem;
+    font-weight: 700;
+}
+.navbar ul li a:hover {
+    color: #0EDE00;
+}
+.navbar .logo{
+    width: 230px;
+    height: auto;
+}
+
+.nav-left {
+    display: flex;
+    margin: 15px 25px;
+    justify-content: center;
+}
+
+.nav-right {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 15px 25px;
+    justify-content: center;
+    color: #FFA500;
+}
+
+/************************************ header ************************************/
+
+.header {
+    height: 40vh;
+    width: 100%;
+    background: #141516;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../images/signup.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.header h1{
+    color: #FFF;
+    font-size: 4rem;
+    font-weight: 600;
+}
+
+/************************************ footer ************************************/
+
+.footer {
+    display: flex;
+    position: absolute;
+    bottom: 0;
+    margin-top: auto;
+    justify-content: center;
+    align-items: center;
+    height: 250px;
+    width: 100%;
+    background: #141516; 
+    color: #fff;
+    font-size: 16px;
+}
+
+.footer-text {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 5px;
+}
+
+.footer-text a:hover {
+    color: #FFA500;
+}
+
+.footer-links {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #0EDE00;
+    font-size: 36px;
+}
+
+.footer-links a {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    padding: 0 10px;
+}
+
+.footer-links a:hover {
+    color: #FFA500;
+}
+
+
+
+
+
+
+
+
+
