--- a/src/main/resources/static/css/signupLogin.css
+++ b/src/main/resources/static/css/signupLogin.css
@@ -1,5 +1,4 @@
 body {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../images/signup.jpg");
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
@@ -7,6 +6,27 @@ body {
     width: 100%;
     font-size: 16px;
 }
+.signup-background {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../images/signup.jpg");
+}
+.login-background {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../images/login.jpg");
+    /*animation: changeBackground 10s infinite;*/
+}
+/*@keyframes changeBackground {
+    0% {
+        background-image: url('../images/fondohermoso1.jpg');
+    }
+    33% {
+        background-image: url('../images/fondohermoso2.jpg');
+    }
+    66% {
+        background-image: url('../images/fondohermoso3.png');
+    }
+    100% {
+        background-image: url('../images/fondohermoso4.jpg');
+    }
+}*/
 a {
     text-decoration: none;
     color: inherit;
@@ -24,6 +44,19 @@ a {
     color: #0DD100;
     font-size: 4rem;
 }
+
+.signup-login-link {
+    margin: 20px 0 0 0;
+}
+
+.signup-login-link a {
+    color: #FFA500;
+}
+
+.signup-login-link a:hover {
+    color: #099100;
+}
+
 .form {
     width: 350px;
     font-size: 20px;
@@ -63,7 +96,8 @@ a {
     border: 5px solid #0DD100;
 }
 .formBtn:hover {
-    background: #0DD100;
+    background: #FFA500;
+    border: 5px solid #FFA500;
 }
 
 .checkbox {
