--- a/src/main/resources/static/css/seguros.css
+++ b/src/main/resources/static/css/seguros.css
@@ -1,5 +1,5 @@
-header{
-    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../images/seguros.jpg);
+.header{
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../images/seguros.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
