--- a/src/main/resources/static/css/destinations.css
+++ b/src/main/resources/static/css/destinations.css
@@ -1,9 +1,6 @@
-/*
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/Other/CascadeStyleSheet.css to edit this template
-*/
-/* 
-    Created on : Apr 4, 2023, 4:05:02 PM
-    Author     : dagov
-*/
-
+.header{
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../images/destinos.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
