--- a/src/main/resources/static/css/mainStyles.css
+++ b/src/main/resources/static/css/mainStyles.css
@@ -27,6 +27,7 @@ a {
 
 .navbar {
     position: fixed;
+    z-index: 1000;
     top: 0;
     display: flex;
     width: 100%;
@@ -41,7 +42,7 @@ a {
     align-items: center;
     list-style-type: none;
     padding: 0 20px;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     font-weight: 700;
 }
 .navbar ul li a:hover {
@@ -88,6 +89,35 @@ a {
     color: #FFF;
     font-size: 4rem;
     font-weight: 600;
+}
+
+/************************************ intro ************************************/
+
+.sec-division {
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+    margin: 0 0 60px 0;
+    font-size: 1.5rem;
+}
+.sec-division-left {
+    max-width: 700px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+}
+.sec-division-right {
+    max-width: 700px;
+}
+.sec-division-left  h2{
+    font-size: 2.5rem;
+    font-weight: 600;
+}
+.sec-division-left  h2 span{
+    color: #FFA500;
 }
 
 /************************************ footer ************************************/
