--- a/src/main/resources/templates/formreserva.html
+++ b/src/main/resources/templates/formreserva.html
@@ -4,12 +4,12 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Seguros</title>
+        <title>TIPS</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css">
         <style>
             body {
-                background-image: url("https://i.ytimg.com/vi/sw7463aYB5k/maxresdefault.jpg");
+                background-image: url("https://fondosmil.com/fondo/2254.jpg");
                 background-size: cover;
                 background-repeat: no-repeat;
             }
@@ -43,11 +43,11 @@
         <div class="titulo">TURISTIANDO</div>
         <div class="container mt-4">
             <div class="col-sm-6">
-                <form th:action="@{/save-seguros}" th:object="${Seguros}" method="POST">
+                <form th:action="@{/save-reserva}" th:object="${Reserva}" method="POST">
                     <div class="card">
                         
                         <div class="card-header">
-                            <h3>SEGUROS</h3>
+                            <h3>Reserva</h3>
                         </div>
                         <div class="card-body">
                             <div class="form-group">
@@ -55,26 +55,40 @@
                                 <input th:field="*{id}" type="text" class="form-control">
                             </div>
                             <div class="form-group">
-                                <label>ASEGURADORA:</label>
-                                <input th:field="*{aseguradora}" type="text" class="form-control">
+                                <label>NOMBRE DE USUARIO:</label>
+                                <input th:field="*{nombreusuario}" type="text" class="form-control">
                             </div>
                             <div class="form-group">
-                                <label>Informacion</label>
-                                <input th:field="*{informacion}" type="text" class="form-control">
+                                <label>NOMBRE DE TOUR:</label>
+                                <input th:field="*{nombredetour}" type="text" class="form-control">
                             </div>
                             <div class="form-group">
-                                <label>TIPO DE SEGURO:</label>
-                                <input th:field="*{tipo_seguro}" type="text" class="form-control">
+                                <label>FECHA DE RESERVA </label>
+                                <input th:field="*{fechadereserva}" type="text" class="form-control">
                             </div>
                             <div class="form-group">
-                                <label>COBERTURA:</label>
-                                <input th:field="*{cobertura}" type="text" class="form-control">
+                                <label>FECHA DE INICIO:</label>
+                                <input th:field="*{fechadeinicio}" type="text" class="form-control">
+                            </div>
+                            <div class="form-group">
+                                <label>FECHA DE FIN</label>
+                                <input th:field="*{fechadefin}" type="text" class="form-control">
+                            </div>
+                            <div class="form-group">
+                                <label>NUMERO PERSONAS:</label>
+                                <input th:field="*{numeropersonas}" type="text" class="form-control">
+                            </div>
+                            <div class="form-group">
+                                <label>METODO DE PAGO:</label>
+                                <input th:field="*{metododepago}" type="text" class="form-control">
+                            </div>
+                            <div class="form-group">
+                                <label>COMENTARIO RESERVA: </label>
+                                <input th:field="*{comentarioreserva}" type="text" class="form-control">
                             </div>
                             
-                            <div class="form-group">
-                                <label>PRECIO:</label>
-                                <input th:field="*{precio}" type="text" class="form-control">
-                            </div>
+                            
+                        
                         </div>
                         <div class="card-footer">
            <input type="submit" value="Guardar" class="btn btn-success">
